--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-compress": "^1.4.3",
+    "grunt-makensis": "^0.4.1",
     "grunt-nw-builder": "^3.1.0",
-    "load-grunt-tasks": "^4.0.0",
     "time-grunt": "^1.4.0"
   }
 }
