--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "gCodeViewer"]
 	path = gCodeViewer
-	url = https://github.com/hudbrog/gCodeViewer.git
+	url = https://github.com/rejas/gCodeViewer.git
