--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-compress": "^1.4.3",
-    "grunt-makensis": "^0.4.1",
+    "grunt-makensis": "https://github.com/rejas/grunt-makensis.git#develop",
     "grunt-nw-builder": "^3.1.0",
     "time-grunt": "^1.4.0"
   }
