--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "grunt-contrib-compress": "^1.4.3",
     "grunt-makensis": "https://github.com/rejas/grunt-makensis.git#develop",
     "grunt-nw-builder": "^3.1.0",
-    "time-grunt": "^1.4.0"
+    "time-grunt": "^2.0.0"
+  },
+  "devDependencies": {
+    "fancylog": "^3.1.1",
+    "gulp": "^3.9.1",
+    "gulp-shell": "^0.6.5",
+    "node-webkit-builder": "~1.0.13",
+    "rimraf": "~2.6.2"
   }
 }
